--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
 							  	<a class="nav-link" href="#Objetivos">Objetivos</a>
 								</li>
 								<li class="nav-item">
-							  	<a class="nav-link" href="#Noticias">Notícias</a>
+								<a class="nav-link" href="#Capitulos">Capítulos</a>
+								</li>
+								<li class="nav-item">
+							  	<a class="nav-link" href="#LinhaTemporal">Linha Temporal</a>
 								</li>
 								<li class="nav-item">
 								<a class="nav-link" href="#Contato">Contato</a>
 								</li>
+								<!--
 								<li class="nav-item dropdown">
 							  	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 										Capítulos
@@ -78,6 +82,7 @@
 								<li class="nav-item">
 							  	<a class="nav-link disabled" href="#"></a>
 								</li>
+								-->
 						  </ul>
 						  <!--<form class="form-inline my-2 my-lg-0">
 								<input class="form-control mr-sm-2" type="search" placeholder="Pesquisa" aria-label="search">
@@ -130,9 +135,7 @@
 				
 		</Section>
 
-		<section class="page-section" id="Objetivos" step="2">
-
-			
+		<section class="page-section" id="Objetivos" step="2" style="background-color: #f0f0f0">
 
 		<div class="container" id="">
 		
@@ -250,6 +253,8 @@
 
 		<!--Capitulos em owl-carousel-->	
 <section class="page-section" id="Capitulos" step="3">
+	<h2 class="section-heading text-uppercase" style="text-align: center">Capítulos</h2>
+	<h3 class="section-subheading text-muted" style="text-align: center">Nossos capítulos técnicos</h3>
 	<div class="owl-carousel owl-theme">
 		<div class="item">
 			<img class="" src="img/logo_ramo_azul_branco.png" >
@@ -274,10 +279,12 @@
 
 
 	<!-- experience (Linha Temporal)  -->
-	<section class="page-section" id="experience" step="4">
+	<section class="page-section" id="LinhaTemporal" step="4" style="background-color: #f0f0f0">
 		<div class="container">
 			<div class="col-md-12">
-				<h1 class="size-50">Linha teporal</h1>
+				<!--<h1 class="size-50 text-uppercase">Linha Temporal</h1>-->
+				<h2 class="section-heading text-uppercase" style="text-align: center">Linha Temporal</h2>
+				<h3 class="section-subheading text-muted" style="text-align: center">Fique por dentro das nossas atividades!</h3>
 				<div class="h-50"></div>
 			</div>
 			<div class="col-md-12">
@@ -285,11 +292,11 @@
 					<li class="timeline-event" data-aos="fade-up">
 						<label class="timeline-event-icon"></label>
 						<div class="timeline-event-copy">
-							<p class="timeline-event-thumbnail">21 março 2018</p>
-							<h3>Criação</h3>
-							<h4>tentativas</h4>
-							<p><strong>Projeo do site do Ramo IEEE</strong>
-								<br>tentamos criar pela primeira vez um site pro ramo</p>
+							<p class="timeline-event-thumbnail">13 Agosto 2019</p>
+							<h3>Título</h3>
+							<h4>Subtítulo</h4>
+							<p><strong>Projeo - Site IEEE UFRJ</strong>
+								<br>Terminamos a base para a index do site do Ramo IEEE UFRJ.</p>
 						</div>
 					</li>
 				</ul>
@@ -299,11 +306,11 @@
 					<li class="timeline-event" data-aos="fade-up">
 						<label class="timeline-event-icon"></label>
 						<div class="timeline-event-copy">
-							<p class="timeline-event-thumbnail">21 março 2018</p>
-							<h3>Criação2</h3>
-							<h4>tentativas2</h4>
-							<p><strong>P222222222222222222</strong>
-								<br>tent22222222222222222222</p>
+							<p class="timeline-event-thumbnail">21 março 2019</p>
+							<h3>Título</h3>
+							<h4>Subtítulo</h4>
+							<p><strong>Projeto - Site IEEE UFRJ</strong>
+								<br>Inicio do projeto do site para o Ramo IEEE UFRJ</p>
 						</div>
 					</li>
 				</ul>
@@ -312,7 +319,7 @@
 </section>
 
 	<!-- Footer -->
-<footer class="page-footer font-small pt-4 bg-footer text-light">
+<footer class="page-footer font-small pt-4 bg-footer text-light" id="Contato">
 
 	<!-- Footer Links -->
 	<div class="container text-center text-md-left">
